# openspec-workflow

./: README.md  package.json  pyproject.toml
adapters/claude/: README.md
adapters/codex/: README.md
adapters/pi/: README.md  extension.ts
examples/demo-project/: .openspec-workflow.yaml  README.md
prompts/: opendesign-change-explainer.md
schemas/: project-policy.schema.json  source-manifest.schema.json
scripts/: openspec-archive-preflight  openspec-build-source-manifest  openspec-generate-explainer  openspec-propose  openspec-validate-explainer  openspec-validate-source-manifest  openspec-workflow
skills/openspec-archive/: SKILL.md
skills/openspec-propose/: SKILL.md
skills/openspec-review/: SKILL.md
src/openspec_workflow/: __main__.py  archive.py  cli.py  explainer.py  manifest.py  policy.py  scaffold.py  validation.py
templates/: change-explainer.template.html
