[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openspec-workflow"
version = "0.1.0"
description = "Harness-neutral workflow core for OpenSpec-style change authoring"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.23.0",
  "PyYAML>=6.0.2",
]

[project.scripts]
openspec-workflow = "openspec_workflow.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
